--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
-
-<html>
-
-    <head>
-    <title>
-    Blrub
-    </title>
-    </head>
-    
-    <body>
-        BLURB
-    </body>
-    </html>
-    
+---
+layout: default
+title: Home
+---
+<h1>{{ "Hello World!" | downcase }}</h1>
