--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 layout: default
 title: Home
 ---
-<h1>{{ "Hello Worldsadsdss!" | downcase }}</h1>
+<div class="center-bigtext">
+    <h1>{{ "Hello Worldsadsdss!" | downcase }}</h1>
+</div>
