--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 layout: default
 title: Home
 ---
-<div class="center-bigtext">
-    <h1>
-        Hi! I’m Emran , a UX Researcher, Designer, and Coder based in Singapore!
-        i’m a ux + interaction researcher at working on human-ai and collaborative interactions with HCI crew at Singapore Management University.
-        
-        i did a little research previously at the National University of Singapore and Singapore Institute of Technology
-        
-        i enjoy building—and occasionally crashing—interplanetary rockets. and playing insanely complicated games
-    </h1>
-</div>
+
+Hi! I'm Emran, a UX Researcher, Designer, and Coder based in Singapore!
+
+i'm a ux + interaction researcher at working on human-ai and collaborative interactions with HCI crew at SMU.
+
+i did a little research at NUS and SIT
+
+i enjoy building — and occasionally crashing — interplanetary rockets. and playing insanely complicated games
